--- a/src/dantto4k_dll.vcxproj
+++ b/src/dantto4k_dll.vcxproj
@@ -161,13 +161,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aacMpuDataProcessor.cpp" />
     <ClCompile Include="acascard.cpp" />
-    <ClCompile Include="acascard.h" />
     <ClCompile Include="adtsConverter.cpp" />
     <ClCompile Include="bonTuner.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="ecm.cpp" />
-    <ClCompile Include="IBonDriver2.h" />
+    <ClCompile Include="hevcMpuDataProcessor.cpp" />
     <ClCompile Include="mhAudioComponentDescriptor.cpp" />
     <ClCompile Include="dantto4k.cpp" />
     <ClCompile Include="mhContentDescriptor.cpp" />
@@ -177,15 +177,16 @@
     <ClCompile Include="mhServiceDescriptor.cpp" />
     <ClCompile Include="mhShortEventDescriptor.cpp" />
     <ClCompile Include="mhTot.cpp" />
-    <ClCompile Include="mmtDescriptor.h" />
     <ClCompile Include="mmtDescriptors.cpp" />
     <ClCompile Include="mmtGeneralLocationInfo.cpp" />
     <ClCompile Include="mmtMessageHandler.cpp" />
     <ClCompile Include="mmtp.cpp" />
+    <ClCompile Include="mmtStream.cpp" />
     <ClCompile Include="mmtTable.cpp" />
     <ClCompile Include="mmttlvdemuxer.cpp" />
-    <ClCompile Include="mmttlvdemuxer.h" />
     <ClCompile Include="mpt.cpp" />
+    <ClCompile Include="mpuAssembler.cpp" />
+    <ClCompile Include="mpuDataProcessorFactory.cpp" />
     <ClCompile Include="mpuExtendedTimestampDescriptor.cpp" />
     <ClCompile Include="mpuTimestampDescriptor.cpp" />
     <ClCompile Include="plt.cpp" />
@@ -193,14 +194,18 @@
     <ClCompile Include="tlv.cpp" />
     <ClCompile Include="smartcard.cpp" />
     <ClCompile Include="tlvNit.cpp" />
+    <ClCompile Include="ttmlMpuDataProcessor.cpp" />
     <ClCompile Include="videoComponentDescriptor.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="aacMpuDataProcessor.h" />
+    <ClInclude Include="acascard.h" />
     <ClInclude Include="adtsConverter.h" />
     <ClInclude Include="bonTuner.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="dantto4k.h" />
     <ClInclude Include="ecm.h" />
+    <ClInclude Include="hevcMpuDataProcessor.h" />
     <ClInclude Include="IBonDriver.h" />
     <ClInclude Include="ip.h" />
     <ClInclude Include="mhAudioComponentDescriptor.h" />
@@ -215,7 +220,11 @@
     <ClInclude Include="mmtGeneralLocationInfo.h" />
     <ClInclude Include="mmtMessageHandler.h" />
     <ClInclude Include="mmtp.h" />
+    <ClInclude Include="mmtStream.h" />
     <ClInclude Include="mpt.h" />
+    <ClInclude Include="mpuAssembler.h" />
+    <ClInclude Include="mpuDataProcessorBase.h" />
+    <ClInclude Include="mpuDataProcessorFactory.h" />
     <ClInclude Include="mpuExtendedTimestampDescriptor.h" />
     <ClInclude Include="mpuTimestampDescriptor.h" />
     <ClInclude Include="plt.h" />
@@ -224,7 +233,11 @@
     <ClInclude Include="mmtTable.h" />
     <ClInclude Include="tlv.h" />
     <ClInclude Include="tlvNit.h" />
+    <ClInclude Include="ttmlMpuDataProcessor.h" />
     <ClInclude Include="videoComponentDescriptor.h" />
+    <ClInclude Include="IBonDriver2.h" />
+    <ClInclude Include="mmtDescriptor.h" />
+    <ClInclude Include="mmttlvdemuxer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
