--- a/src/dantto4k_dll.vcxproj
+++ b/src/dantto4k_dll.vcxproj
@@ -167,15 +167,25 @@
     <ClCompile Include="bonTuner.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="ecm.cpp" />
+    <ClCompile Include="eventPackageDescriptor.cpp" />
     <ClCompile Include="hevcMpuDataProcessor.cpp" />
     <ClCompile Include="mhAudioComponentDescriptor.cpp" />
     <ClCompile Include="dantto4k.cpp" />
+    <ClCompile Include="mhCaContractInformation.cpp" />
+    <ClCompile Include="mhCdt.cpp" />
     <ClCompile Include="mhContentDescriptor.cpp" />
+    <ClCompile Include="mhDataComponentDescriptor.cpp" />
     <ClCompile Include="mhEit.cpp" />
+    <ClCompile Include="mhEventGroupDescriptor.cpp" />
     <ClCompile Include="mhExtendedEventDescriptor.cpp" />
+    <ClCompile Include="mhLinkageDescriptor.cpp" />
+    <ClCompile Include="mhLogoTransmissionDescriptor.cpp" />
+    <ClCompile Include="mhParentalRatingDescriptor.cpp" />
     <ClCompile Include="mhSdt.cpp" />
+    <ClCompile Include="mhSeriesDescriptor.cpp" />
     <ClCompile Include="mhServiceDescriptor.cpp" />
     <ClCompile Include="mhShortEventDescriptor.cpp" />
+    <ClCompile Include="mhStreamIdentificationDescriptor.cpp" />
     <ClCompile Include="mhTot.cpp" />
     <ClCompile Include="mmtDescriptors.cpp" />
     <ClCompile Include="mmtGeneralLocationInfo.cpp" />
@@ -205,16 +215,26 @@
     <ClInclude Include="config.h" />
     <ClInclude Include="dantto4k.h" />
     <ClInclude Include="ecm.h" />
+    <ClInclude Include="eventPackageDescriptor.h" />
     <ClInclude Include="hevcMpuDataProcessor.h" />
     <ClInclude Include="IBonDriver.h" />
     <ClInclude Include="ip.h" />
     <ClInclude Include="mhAudioComponentDescriptor.h" />
+    <ClInclude Include="mhCaContractInformation.h" />
+    <ClInclude Include="mhCdt.h" />
     <ClInclude Include="mhContentDescriptor.h" />
+    <ClInclude Include="mhDataComponentDescriptor.h" />
     <ClInclude Include="mhEit.h" />
+    <ClInclude Include="mhEventGroupDescriptor.h" />
     <ClInclude Include="mhExtendedEventDescriptor.h" />
+    <ClInclude Include="mhLinkageDescriptor.h" />
+    <ClInclude Include="mhLogoTransmissionDescriptor.h" />
+    <ClInclude Include="mhParentalRatingDescriptor.h" />
     <ClInclude Include="mhSdt.h" />
+    <ClInclude Include="mhSeriesDescriptor.h" />
     <ClInclude Include="mhServiceDescriptor.h" />
     <ClInclude Include="mhShortEventDescriptor.h" />
+    <ClInclude Include="mhStreamIdentificationDescriptor.h" />
     <ClInclude Include="mhTot.h" />
     <ClInclude Include="mmtDescriptors.h" />
     <ClInclude Include="mmtGeneralLocationInfo.h" />
