--- a/src/dantto4k.vcxproj
+++ b/src/dantto4k.vcxproj
@@ -158,9 +158,13 @@
     <ClCompile Include="ecm.cpp" />
     <ClCompile Include="eventPackageDescriptor.cpp" />
     <ClCompile Include="extensionHeaderScrambling.cpp" />
+    <ClCompile Include="mhBIt.cpp" />
+    <ClCompile Include="mhSiParameterDescriptor.cpp" />
     <ClCompile Include="mmtDescriptorFactory.cpp" />
     <ClCompile Include="mmtTableFactory.cpp" />
     <ClCompile Include="multimediaServiceInformationDescriptor.cpp" />
+    <ClCompile Include="relatedBroadcasterDescriptor.cpp" />
+    <ClCompile Include="systemManagementDescriptor.cpp" />
     <ClCompile Include="tlvDescriptorFactory.cpp" />
     <ClCompile Include="tlvTableFactory.cpp" />
     <ClCompile Include="videoMfuDataProcessor.cpp" />
@@ -227,10 +231,14 @@
     <ClInclude Include="eventPackageDescriptor.h" />
     <ClInclude Include="extensionHeaderScrambling.h" />
     <ClInclude Include="demuxerHandler.h" />
+    <ClInclude Include="mhBIt.h" />
+    <ClInclude Include="mhSiParameterDescriptor.h" />
     <ClInclude Include="mmtDescriptorFactory.h" />
     <ClInclude Include="mmtFragment.h" />
     <ClInclude Include="mmtTableFactory.h" />
     <ClInclude Include="multimediaServiceInformationDescriptor.h" />
+    <ClInclude Include="relatedBroadcasterDescriptor.h" />
+    <ClInclude Include="systemManagementDescriptor.h" />
     <ClInclude Include="tlvDescriptorFactory.h" />
     <ClInclude Include="tlvTableFactory.h" />
     <ClInclude Include="videoMfuDataProcessor.h" />
